--- a/style.css
+++ b/style.css
@@ -173,3 +173,12 @@ button{
 
 
 }
+#caja6{
+  padding-top: 10px;
+  background: #333;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  color: white;
+  
+}
